Fixed Bug 36919 - New mail compose: Prefilled mail address gets cut off

--- a/ui/apps/io.ox/core/tk/tokenfield.less
+++ b/ui/apps/io.ox/core/tk/tokenfield.less
@@ -75,6 +75,11 @@
             margin: 0;
         }
 
+        .tt-hint {
+            // don't cut of hints in firefox
+            width: 100% !important;
+        }
+
         .tt-dropdown-menu {
             width: @tokenfield-menu-width;
             min-width: @tokenfield-menu-width;
